# minion_hub

./: .env.defaults  .env.example  .gitignore  .prettierignore  .vercelignore  CLAUDE.md  docs  drizzle.config.ts  electrobun.config.ts  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
desktop/: launch.sh  main.ts  postbuild.sh  postbuild.ts
docs/: 2026-06-05-turso-legacy-cutover-plan.md  2026-06-09-turso-cutover-B3-B5-execution.md  2026-06-09-turso-cutover-stage5-plan.md  2026-06-10-betterauth-to-supabase-migration.md  security-ssrf-hardening.md  ui-coherence-wave-b-route-ledger.md
drizzle/: 0000_previous_phantom_reporter.sql  0001_natural_demogoblin.sql  0002_yielding_loki.sql  0003_add_metrics_tables.sql  0004_session_key_unique.sql  0005_session_tasks.sql  0006_marketplace.sql  0007_encrypt_server_tokens.sql  0008_workshop_thumbnail.sql  0009_marketplace_files_loaded_at.sql  0010_unified_events.sql  0011_sec_workshop_flows_ownership.sql  0012_user_alias_role.sql  0013_roles.sql  0014_user_identities.sql  0015_flows_trigger_columns.sql  0016_user_identity_user_provider.sql
messages/: en.json  es.json
project.inlang/: project_id  settings.json
scripts/: .design-lint-baseline.json  DESIGN-LINT.md  db-migrate.ts  (+27 more)
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/loading-dist/: index.html
src-tauri/src/: lib.rs  main.rs
(+2639 files in other folders)
